# js_web_scraper

./: Cargo.toml
src/: main.rs
src/my_florida_marketplace/: mod.rs  navigate.rs  process.rs  scrape.rs  search.rs
src/shared/: mod.rs  scrape.rs  web_driver.rs
tests/: action.rs  common.rs
