[package]
name = "js_web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = {git = "https://github.com/stevepryde/thirtyfour.git", branch = "main"}
tokio = { version = "1.33.0", features = ["full"] }
color-eyre = "0.6.2"
selenium_webdriver = "0.1.7"
async-recursion = "1.0.5"
regex = "1.10.2"
chrono = "0.4"
webdriver = "0.49.0"
strum = "0.25"
strum_macros = "0.25"
serde_json = "1.0.108"
once_cell = "1.19.0"
thiserror = "1.0.51"
path-absolutize = "3.1.1"
anyhow = "1.0.76"